k8s/all_k8s_15.yaml
kind: Namespace
apiVersion: v1
metadata:
  name: klusterfuck
  labels:
    name: klusterfuck
apiVersion: v1
---
apiVersion: v1
kind: Service
metadata:
  name: klusterfuck
  namespace: klusterfuck
  labels:
    app: klusterfuck
    component: klusterfuck
spec:
  ports:
  - port: 80
    targetPort: 8080
  selector:
    app: klusterfuck
    component: klusterfuck
---
apiVersion: v1
kind: Service
metadata:
  name: gogs
  namespace: klusterfuck
  labels:
    app: gogs
    component: gogs
spec:
  ports:
  - port: 80
    targetPort: 3000
  selector:
    app: gogs
    component: gogs
