k8s/codiad.yaml
apiVersion: v1
kind: Service
metadata:
  name: cloud9
  namespace: klusterfuck
  labels:
    app: cloud9
    component: cloud9
spec:
  ports:
  - port: 80
    targetPort: 80
  selector:
    app: cloud9
    component: cloud9
