k8s/all.yaml
kind: Namespace
apiVersion: v1
metadata:
  name: klusterfuck
  labels:
    name: klusterfuck
---
apiVersion: v1
kind: Service
metadata:
  name: klusterfuck
  namespace: klusterfuck
  labels:
    app: klusterfuck
    component: klusterfuck
spec:
  ports:
  - port: 80
    targetPort: 8080
  selector:
    app: klusterfuck
    component: klusterfuck
---
apiVersion: v1
kind: Service
metadata:
  name: gogs
  namespace: klusterfuck
  labels:
    app: gogs
    component: gogs
spec:
  ports:
  - port: 80
    targetPort: 3000
  selector:
    app: gogs
    component: gogs
---
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: klusterfuck
  namespace: klusterfuck
spec:
  rules:
  - host: klusterfuck.kube.local
    http:
      paths:
      - path: /
        backend:
          serviceName: klusterfuck
          servicePort: 80
---
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: gogs
  namespace: klusterfuck
spec:
  rules:
  - host: gogs.kube.local
    http:
      paths:
      - path: /
        backend:
          serviceName: gogs
          servicePort: 80
