k8s/gogs.yaml
kind: Namespace
apiVersion: v1
metadata:
  name: gogs
  labels:
    name: gogs
---
apiVersion: v1
kind: Service
metadata:
  name: gogs
  namespace: gogs
  labels:
    app: gogs
    component: gogs
spec:
  ports:
  - port: 3000
    targetPort: 3000
  selector:
    app: gogs
    component: gogs
---
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: gogs
  namespace: gogs
spec:
  rules:
  - host: gogs.kube.local
    http:
      paths:
      - path: /
        backend:
          serviceName: gogs
          servicePort: 3000
