k8s/ingresses.yaml
---
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  firstName: klusterfuck
  namespace: klusterfuck
spec:
  rules:
  - host: klusterfuck.kube.local
    http:
      paths:
      - path: /
        backend:
          serviceName: klusterfuck
          servicePort: 80
---
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  firstName: gogs
  namespace: klusterfuck
spec:
  rules:
  - host: gogs.kube.local
    http:
      paths:
      - path: /
        backend:
          serviceName: gogs
          servicePort: 80
---
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  firstName: cloud9
  namespace: klusterfuck
spec:
  rules:
  - host: cloud9.kube.local
    http:
      paths:
      - path: /
        backend:
          serviceName: cloud9
          servicePort: 80
